# 2023_asms-depthcharge

./: .gitignore  Makefile  README.md  environment.yaml  pyproject.toml
colab/: intensity-prediction.ipynb  ion-mobility-prediction.ipynb
data/colab/fragment-prediction/: train_loss.csv  validation_loss.csv
data/colab/ion-mobility-prediction/: train_loss.csv  validation_loss.csv
data/colab/psm-embedding/: train.csv
notebooks/: ccs-figures.ipynb  embedding-figures.ipynb  encoding.ipynb  intensity-prediction-figures.ipynb
src/: data.py
